# openloot-bot

./: .env.example  Cargo.toml  Dockerfile  database.sqlite  docker-compose.yaml  index.js  package-lock.json  package.json
bot/: Cargo.toml  user_agents
bot/src/: main.rs
bot_flipper/: Cargo.toml
bot_flipper/src/: main.rs
database/: Cargo.toml
database/migration/src/: lib.rs  m20230514_072524_create_items.rs  m20230514_073528_create_subscriptions.rs  m20231015_103543_create_rental_subscriptions.rs  m20231018_114546_add_subscription_last_price_notified.rs
database/migrations/2023-03-25-195021_create_items/: up.sql
database/migrations/2023-03-26-133511_create_subscriptions/: up.sql
database/src/: lib.rs  models.rs  schema.rs
database/src/entities/: market_item.rs  mod.rs  prelude.rs  rental_subscription.rs  subscription.rs
screener/: Cargo.toml
screener/src/: lib.rs  requests.rs
