[package]
name = "bot_flipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }

dotenv = "0.15.0"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
regex = "1.7.3"
lazy_static = "1.4.0"
async_once = "0.2.6"
