[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel_migrations = { version = "^2.0.0", git = "https://github.com/diesel-rs/diesel/"}
diesel = { version = "^2.0.0", features = ["sqlite"], git = "https://github.com/diesel-rs/diesel" }
