[package]
name = "screener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }

dotenv = "0.15.0"
curl = "0.4.44"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
fake-useragent = "0.1.3"
